[package]
name = "chainmq"
version = "0.1.0"
edition = "2024"
authors = ["Alexander Nitiola <cre8tor.alexander@gmail.com>"]
description = "A Redis-backed, type-safe job queue for Rust. Provides job registration and execution, delayed jobs, retries with backoff, and scalable workers."
license = "MIT"
repository = "https://github.com/thecre8tor/chainmq"
documentation = "https://docs.rs/chainmq"
keywords = ["queue", "jobs", "bullmq", "redis", "workers"]
categories = ["web-programming", "data-structures", "message-queue", "redis-queue"]


[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
redis = { version = "0.32", features = ["tokio-comp", "script"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "6.1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
parking_lot = "0.12"
bullrs = "0.0.1"

[dev-dependencies]
tokio-test = "0.4"
